# design_playground

./: Cargo.toml
examples/: first_pass.rs  fwdpp_copy.rs  genome_array.rs  genome_array_compacted.rs  genome_array_counted.rs
src/: common.rs  first_pass.rs  fwdpp_copy.rs  genome_array.rs  genome_array_compacted.rs  genome_array_counted.rs  genome_chunked_array.rs  genome_dynamic_chunks.rs  lib.rs
