[package]
name = "design_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forrustts = {version = "0.3.0-alpha.0", git = "https://github.com/ForwardSimulation/forrustts"}
rand = "0.8.5"
rand_distr = "0.4.3"
